[package]
name = "ratelimit"
description = "An HTTP authentication middleware component."
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = { git = "https://github.com/fermyon/spin", branch = "main", features = [
    "json",
] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.108"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "3518b5e2f08e4028b7f0cf0ed386e03423a3cd1b" }

[workspace]

[package.metadata.component]
package = "middleware:http-auth"

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "wit/deps/http" }
"wasi:io" = { path = "wit/deps/io" }

[features]
# Inject oauth credentials environment variables at compile time rather than runtime
compile-time-secrets = []
